--- a/css/_secondary.scss
+++ b/css/_secondary.scss
@@ -59,6 +59,7 @@
                 .sec-desc {
                     h1 {
                         font-size: 2.5rem;
+                        margin-bottom: 1.2rem;
                     }
                     p {
                         font-size: .8rem;
@@ -81,7 +82,8 @@
                         padding-right: 8rem;
                     }
                     p {
-                        padding-right: 6rem;
+                        font-size: .9rem;
+                        padding-right: 0;
                     }
                 }
             }
