--- a/css/_reviews.scss
+++ b/css/_reviews.scss
@@ -30,7 +30,7 @@
                 width: 15%;
             }
             .hero-details {
-                h3 {
+                h2 {
                     font-size: .9rem;
                     margin-bottom: .2rem;
                 }
@@ -77,7 +77,7 @@
             }
             .review-hero {
                 .hero-details {
-                    h3 {
+                    h2 {
                         font-size: .8rem;
                     }
                     p {
@@ -92,18 +92,25 @@
 
 @media (min-width: 87em) {
     .reviews {
-        margin: 8rem 3rem 4rem 3rem;
+        margin: 8rem 6rem 5rem 6rem;
+        &::after {
+            top: -45px;
+            left: -15px;
+        }
         .review-card {
             p {
-                font-size: 1rem;
+                font-size: .9rem;
             }
             .review-hero {
+                img {
+                    width: 10%;
+                }
                 .hero-details {
-                    h3 {
-                        font-size: 1rem;
+                    h2 {
+                        font-size: .9rem;
                     }
                     p {
-                        font-size: .8rem;
+                        font-size: .7rem;
                     }
                 }
             }
