solve footer-icon issue

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -58,7 +58,7 @@
                 @include flex(row, center);
                 align-items: flex-start;
                 margin-top: 4rem;
-                .circle {
+                i {
                     border: .06rem solid #fff;
                     border-radius: 50%;
                     color: #fff;
