--- a/css/style.css
+++ b/css/style.css
@@ -937,7 +937,7 @@ footer .footer-wrapper .social-media {
   margin-top: 4rem;
 }
 
-footer .footer-wrapper .social-media .circle {
+footer .footer-wrapper .social-media i {
   border: .06rem solid #fff;
   border-radius: 50%;
   color: #fff;
@@ -956,7 +956,7 @@ footer .footer-wrapper .social-media .circle {
   text-decoration: none;
 }
 
-footer .footer-wrapper .social-media .circle:hover {
+footer .footer-wrapper .social-media i:hover {
   border: 0.06rem solid #65e2d9;
   color: #65e2d9;
 }
